# WGAN

./: README.md  pyproject.toml  setup.py
configs/: train.toml
scripts/: train.py
src/: config.py
src/data/: datamodules.py  datasets.py  transforms.py
src/models/: models.py
